--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   calendar_timeline: ^1.1.3
   google_fonts: ^6.2.1
   firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  
 
 dev_dependencies:
   flutter_test:
