--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
+  flutter_slidable: ^3.1.1
   
 
 dev_dependencies:
